# todolist-django-ddd

./: .copier-answers.yml  .gitignore  README.md  app.py  mypy.ini  pyproject.toml  tasks.py
task_manager/: cli.py  commands.py  parser.py  repository.py  tasks.py  todo_list.py
task_manager/repositories/: in_memory.py  json_db.py
tests/: conftest.py  settings.py  test_commands.py  test_parser.py  test_repository.py  test_todo_list.py  test_webapp.py
todos/: models.py  repository.py  urls.py  views.py
todos/migrations/: 0001_initial.py
webapp/: env.py  settings.py  urls.py  views.py
webapp/todos/: apps.py  repository.py  urls.py  views.py
