[tool.isort]
profile = "black"

[tool.poetry]
name = "task_manager"
version = "0.0.1"
description = "Using DDD with Django on a simple TODO-list app"
authors = ["Dimitri Merejkowsky <dimitri.merejkowsky@arolla.fr>"]
readme = "README.md"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"

[tool.poetry.dev-dependencies]
# Task runner
invoke = "^1.5.0"

# Tests
coverage = "^5.2"
pytest = "^6.2.1"
pytest-cov = "^2.10"
pytest-django = "^4.0.0"

# Linters
black = "^22.3"
django-stubs = "^1.9.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.8.23"
flake8-comprehensions = "^3.4.0"
pep8-naming = "^0.11.1"
isort = "^5.7.0"
mypy = "0.960"


# Deps scanning
safety = "^1.9.0"

[tool.poetry.scripts]
task-manager = "task_manager.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
